--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Syzygy TTRPG character sheet and dice roller">
     <title>Syzygy</title>
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="style.css">
 </head>
 <body>
 		<header class="page-header">
-			<span class="page-header__brand">SYZYGY</span>
+			<a class="page-header__brand" href="/" data-link>SYZYGY</a>
 
 			<input
 				type="checkbox"
