--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Syzygy TTRPG character sheet and dice roller">
     <title>Syzygy</title>
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="favicon-16x16.png" type="image/png">
 		<link rel="stylesheet" href="style.css">
 </head>
 <body>
