--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Syzygy</title>
 	<meta name="description" content="Syzygy TTRPG character sheet and dice roller">
-	<link rel="prefetch" href="./static/common.js" as="script">
-	<link rel="prefetch" href="./static/html-templating.js" as="script">
-	<link rel="prefetch" href="./static/character-api.js" as="script">
-	<link rel="shortcut icon" href="favicon-16x16.png" type="image/png">
-	<link rel="stylesheet" href="style.css">
+	<link rel="prefetch" href="./static/scripts/common.js" as="script">
+	<link rel="prefetch" href="./static/scripts/html-templating.js" as="script">
+	<link rel="prefetch" href="./static/scripts/character-api.js" as="script">
+	<link rel="shortcut icon" href="./static/images/favicon-16x16.png" type="image/png">
+	<link rel="stylesheet" href="./static/style.css">
 </head>
 
 <body>
@@ -44,7 +44,7 @@
 
 	<main class="view-body" data-js="router-root"></main>
 
-	<script src="./static/main.js" type="module"></script>
+	<script src="./static/scripts/main.js" type="module"></script>
 </body>
 
 </html>
