Fix links to allow open in new tab

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 	<header class="page-header">
-		<a class="page-header__brand" href="/" data-link>SYZYGY</a>
+		<a class="page-header__brand" href="#/" data-link>SYZYGY</a>
 
 		<input
 			type="checkbox"
@@ -36,9 +36,9 @@
 		</label>
 
 		<nav class="page-header__nav">
-			<a href="/" data-link>Characters</a>
-			<a href="/character/3" data-link>Character</a>
-			<a href="/cheese" data-link>Cheese?</a>
+			<a href="#/" data-link>Characters</a>
+			<a href="#/character/3" data-link>Character</a>
+			<a href="#/cheese" data-link>Cheese?</a>
 		</nav>
 	</header>
 
